# no-magic-viz

./: .gitignore  README.md  pyproject.toml
.github/workflows/: render.yml
scenes/: base.py  no_magic_overview.py  scene_microattention.py  scene_microbandit.py  scene_microbatchnorm.py  scene_microbeam.py  scene_microbert.py  scene_microbm25.py  scene_microcheckpoint.py  scene_microcomplexssm.py  scene_microconv.py  scene_microdiffusion.py  scene_microdiscretize.py  scene_microdpo.py  scene_microdropout.py  scene_microembedding.py  scene_microflash.py  scene_microgan.py  scene_microgpt.py  scene_microgrpo.py  scene_microkv.py  scene_microlora.py  scene_microlstm.py  scene_micromcts.py  scene_micromemory.py  scene_microminimax.py  scene_micromoe.py  scene_microoptimizer.py  scene_micropaged.py  scene_microparallel.py  scene_microppo.py  scene_microqlora.py  scene_microquant.py  scene_microrag.py  scene_microreact.py  scene_microreinforce.py  scene_microresnet.py  scene_micrornn.py  scene_microroofline.py  scene_microrope.py  (+6 more)
scripts/: render.sh  render_all.py
