[project]
name = "no-magic-viz"
version = "1.0.0"
description = "Manim-powered algorithm visualizations for the no-magic project"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "manim>=0.18.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
# Manim scenes: star imports required, long constructor lines are normal,
# single-char loop vars (l, x) are standard in animation code
"scenes/*.py" = ["F403", "F405", "E501", "E741", "F841"]
